Before moving to cocotbext-axi as reference
Signed-off-by: Anderson Ignacio <anderson@aignacio.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,11 +3,11 @@ name: Tests
 on:
   push:
     branches:
-      - main
+      - master
       - 'stable/**'
   pull_request:
     branches:
-      - main
+      - master
       - 'stable/**'
 
 jobs:
