--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,16 +11,8 @@ on:
       - 'stable/**'
 
 jobs:
-  Regression-tests:
+  regresion-tests:
     name: Regresion Tests
-    strategy:
-      matrix:
-        python-version:
-          - 3.6
-          - 3.7
-          - 3.8
-          - 3.9
-          - 3.10
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -34,22 +26,10 @@ jobs:
     - name: Install Verilator requirements
       run: |
         sudo apt update -y
-        sudo apt-get install git help2man perl python3 make
-        sudo apt-get install g++  # Alternatively, clang
-        sudo apt-get install libfl-dev  # Ubuntu only (ignore if gives error)
-        sudo apt-get install zlib1g zlib1g-dev  # Ubuntu only (ignore if gives error)
-    - name: Set up Verilator
-      run: |
-        git clone https://github.com/verilator/verilator
-        cd verilator
-        git checkout stable
-        autoconf
-        ./configure
-        make
-        sudo make install
+        sudo apt-get install verilator -y
     - name: Install testing requirements
       run: |
         pip install nox
     - name: Run tests
       run: |
-        nox -s "run-${{ matrix.python-version }}"
+        nox -s run-3.10
