--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,6 +14,7 @@ jobs:
   regresion-tests:
     name: Regresion Tests
     runs-on: ubuntu-latest
+    container: aignacio/rtldev:latest
     strategy:
       fail-fast: false
     steps:
@@ -23,10 +24,6 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: "3.10"
-    - name: Install Verilator requirements
-      run: |
-        sudo apt update -y
-        sudo apt-get install verilator -y
     - name: Install testing requirements
       run: |
         pip install nox
