--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,23 +11,46 @@ on:
       - 'stable/**'
 
 jobs:
-  regresion-tests:
-    name: Regresion Tests
+  build:
     runs-on: ubuntu-latest
-    container: 
-      image: aignacio/rtldev:latest
+
     strategy:
-      fail-fast: false
+      matrix:
+        python-version:
+          - 3.6
+          - 3.7
+          - 3.8
+          - 3.9
+          - 3.10
+
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: 'recursive'
-    - uses: actions/setup-python@v2
-      with:
-        python-version: "3.10"
-    - name: Install testing requirements
-      run: |
-        pip install nox
-    - name: Run tests
-      run: |
-        nox -s run-3.10
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Install Verilator requirements
+        run: |
+          sudo apt update -y
+          sudo apt-get install git help2man perl python3 make
+          sudo apt-get install g++  # Alternatively, clang
+          sudo apt-get install libfl-dev  # Ubuntu only (ignore if gives error)
+          sudo apt-get install zlib1g zlib1g-dev  # Ubuntu only (ignore if gives error)
+      - name: Set up Verilator
+        run: |
+          git clone https://github.com/verilator/verilator
+          cd verilator
+          git checkout stable
+          autoconf
+          ./configure
+          make
+          sudo make install
+        shell: bash
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install nox
+        run: pip install --upgrade nox
+
+      - name: Run nox tests
+        run: nox -s "run-${{ matrix.python-version }}"
