--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     strategy:
       matrix:
@@ -20,7 +20,6 @@ jobs:
           - 3.7
           - 3.8
           - 3.9
-          - 3.10.x
 
     steps:
       - name: Check out code
