Trying to include coverage
Signed-off-by: Anderson Ignacio <anderson@aignacio.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -55,3 +55,8 @@ jobs:
 
       - name: Run nox tests
         run: nox -s "run-${{ matrix.python-version }}"
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
