--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: "3.10"
     - name: Install deps
       run: >-
-        pip install -e
+        pip install -e .
     - name: Install pypa/build
       run: >-
         python -m
