--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,32 +9,23 @@ on:
       - 'stable/**'
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  build-n-publish:
+    name: Build and publish Python 🐍 distributions 📦 to PyPI
+    runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@master
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
-    - name: Install deps
-      run: >-
-        pip install -e .
-    - name: Install pypa/build
+        python-version: '3.10'
+    - name: Install pypa/setuptools
       run: >-
         python -m
-        pip install
-        build
-        --user
-    - name: Build a binary wheel and a source tarball
+        pip install wheel
+    - name: Build a binary wheel
       run: >-
-        python -m
-        build
-        --sdist
-        --wheel
-        --outdir dist/
-        .
+        python setup.py sdist bdist_wheel
     - name: Publish distribution 📦 to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
+      uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
