--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,6 +18,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.10'
+    - name: Install deps
+      run: >-
+        pip install cocotb cocotb-bus cocotb-test 
     - name: Install pypa/setuptools
       run: >-
         python -m
