--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         python-version:
           - 3.9
-
+          - '3.10'
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -36,7 +36,9 @@ jobs:
   tests:
     runs-on: ubuntu-22.04
     needs: lint
-
+    if: |
+      always() &&
+      (needs.lint.result == 'success')
     strategy:
       matrix:
         python-version:
@@ -73,6 +75,9 @@ jobs:
     name: Build and publish Python 🐍 distributions 📦 to PyPI
     runs-on: ubuntu-latest
     needs: tests
+    if: |
+      always() &&
+      (needs.tests.result == 'success')
     steps:
     - uses: actions/checkout@master
     - name: Set up Python 3.10
