--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -95,6 +95,6 @@ jobs:
       run: >-
         python setup.py sdist bdist_wheel
     - name: Publish distribution 📦 to PyPI
-      uses: pypa/gh-action-pypi-publish@master
+      uses: pypa/gh-action-pypi-publish@release/v1.9
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
