--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -88,6 +88,7 @@ jobs:
         pip install cocotb cocotb-bus cocotb-test 
     - name: Install pypa/setuptools
       run: >-
+        python -m
         pip install wheel
     - name: Build a binary wheel
       run: >-
