--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -79,20 +79,20 @@ jobs:
       (needs.tests.result == 'success')
     steps:
     - uses: actions/checkout@master
-    - name: Set up Python 3.10
+    - name: Set up Python 3.12
       uses: actions/setup-python@v3
       with:
-        python-version: '3.10'
-    - name: Install deps
-      run: >-
-        pip install cocotb cocotb-bus cocotb-test 
-    - name: Install pypa/setuptools
-      run: >-
-        python -m
-        pip install wheel
-    - name: Build a binary wheel
-      run: >-
-        python setup.py sdist bdist_wheel
+        python-version: '3.12'
+
+    - name: Install build tools
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install build wheel
+
+    - name: Build distributions
+      run: |
+        python -m build --sdist --wheel --outdir dist/
+
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1.9
       with:
