--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -78,7 +78,7 @@ jobs:
       always() &&
       (needs.tests.result == 'success')
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v3
     - name: Set up Python 3.12
       uses: actions/setup-python@v3
       with:
@@ -94,6 +94,6 @@ jobs:
         python -m build --sdist --wheel --outdir dist/
 
     - name: Publish distribution 📦 to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1.9
+      uses: pypa/gh-action-pypi-publish@release/v1.13
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
